update doctor suggetion

--- a/doctor.html
+++ b/doctor.html
@@ -6,10 +6,133 @@
 </head>
 <body>
 
-<div class="container">
-  <h2>Best Doctors for Your Condition</h2>
-  <p>Doctor Suggestion results will appear here.</p>
+<div class="navbar">
+  <a href="dashboard.html">Dashboard</a>
+  <a href="prediction.html">Disease Prediction</a>
+  <a href="doctor.html">Doctor Suggestion</a>
+  <a href="nearby.html">Nearby Doctor</a>
+  <a href="blood.html">Blood Donor</a>
+  <a href="ambulance.html">Ambulance</a>
 </div>
+
+<div class="container">
+
+  <!-- Header -->
+  <div style="display:flex; align-items:center; gap:20px;">
+      <img src="image/Doctor Icon.png" width="80">
+      <div>
+          <h2>Doctor Suggestion</h2>
+          <p style="color:#9bb1c9;">Find the best doctors based on your health condition.</p>
+      </div>
+  </div>
+
+  <hr style="border:1px solid #1f2937; margin:20px 0;">
+
+  <!-- Search Filters -->
+  <div style="display:flex; gap:20px; flex-wrap:wrap;">
+      <input type="text" placeholder="Search by symptom (e.g., headache)"
+             style="flex:2; padding:12px; border-radius:6px;">
+      <select style="flex:1; padding:12px; border-radius:6px;">
+        <option selected>Select Specialization</option>
+        <option>Cardiologist</option>
+        <option>Neurologist</option>
+        <option>General Physician</option>
+        <option>Dermatologist</option>
+        <option>Orthopedic</option>
+        <option>Diabetes Specialist</option>
+      </select>
+      <button style="padding:12px 20px;">🔍 Search</button>
+  </div>
+
+  <!-- Doctor List -->
+  <div style="margin-top:30px; display:flex; flex-direction:column; gap:25px;">
+
+      <!-- Doctor Card 1 -->
+      <div style="
+          background:#0f172a; 
+          padding:20px; 
+          border-radius:12px;
+          display:flex; 
+          gap:20px;
+      ">
+        <img src="images/doctor_profile1.png" width="100" style="border-radius:10px;">
+        <div>
+            <h3 style="margin:0;">Dr. Arif Hossain</h3>
+            <p style="color:#7fffd4; margin:5px 0;">Cardiologist (MBBS, FCPS)</p>
+            <p style="color:#d1d5db;">🏥 Square Hospital, Dhaka</p>
+            <p style="color:#d1d5db;">⭐ 4.8 | 10+ years experience</p>
+            <p style="color:#d1d5db;">📍 2.1 km away</p>
+
+            <button style="margin-top:10px;">📄 View Profile</button>
+            <button style="margin-top:10px;">📞 Call Now</button>
+        </div>
+      </div>
+
+      <!-- Doctor Card 2 -->
+      <div style="
+          background:#0f172a; 
+          padding:20px; 
+          border-radius:12px;
+          display:flex; 
+          gap:20px;
+      ">
+        <img src="images/doctor_profile2.png" width="100" style="border-radius:10px;">
+        <div>
+            <h3 style="margin:0;">Dr. Shaila Akter</h3>
+            <p style="color:#7fffd4; margin:5px 0;">Neurologist (MBBS, MD)</p>
+            <p style="color:#d1d5db;">🏥 Popular Diagnostic Center</p>
+            <p style="color:#d1d5db;">⭐ 4.9 | 12+ years experience</p>
+            <p style="color:#d1d5db;">📍 3.4 km away</p>
+
+            <button style="margin-top:10px;">📄 View Profile</button>
+            <button style="margin-top:10px;">📞 Call Now</button>
+        </div>
+      </div>
+
+      <!-- Doctor Card 3 -->
+      <div style="
+          background:#0f172a; 
+          padding:20px; 
+          border-radius:12px;
+          display:flex; 
+          gap:20px;
+      ">
+        <img src="images/doctor_profile3.png" width="100" style="border-radius:10px;">
+        <div>
+            <h3 style="margin:0;">Dr. Mahmud Rahman</h3>
+            <p style="color:#7fffd4; margin:5px 0;">General Physician (MBBS)</p>
+            <p style="color:#d1d5db;">🏥 Ibne Sina Hospital</p>
+            <p style="color:#d1d5db;">⭐ 4.6 | 7+ years experience</p>
+            <p style="color:#d1d5db;">📍 1.9 km away</p>
+
+            <button style="margin-top:10px;">📄 View Profile</button>
+            <button style="margin-top:10px;">📞 Call Now</button>
+        </div>
+      </div>
+
+  </div>
+
+  <!-- Map Section -->
+  <h3 style="margin-top:40px;">Doctors Map</h3>
+  <div style="
+      width:100%;
+      height:250px;
+      background:#1a2336;
+      border-radius:10px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      color:#94a3b8;
+  ">
+      Google Map Preview
+  </div>
+
+</div>
+
+<!-- Footer -->
+<footer style="margin-top:40px; background:#070d1a; padding:20px; text-align:center; color:#94a3b8;">
+    © 2025 LifeLink • All Rights Reserved
+</footer>
 
 </body>
 </html>
