fixed login page

--- a/login.html
+++ b/login.html
@@ -13,5 +13,23 @@
   <button onclick="window.location='dashboard.html'">Login</button>
 </div>
 
+
+
+<!-- next applay -->
+
+
+<!-- <div class="container">
+  <h2>Login</h2>
+
+  <p id="login-error" style="color:#ff6666; display:none;"></p>
+
+  <input type="email" id="email" placeholder="Email">
+  <input type="password" id="password" placeholder="Password">
+
+  <button onclick="login()">Login</button>
+</div> -->
+
+
+
 </body>
 </html>
